--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - images/test.jpg
+    - data/court_info.csv
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
